# h5z-rocci

./: CMakeLists.txt  COPYRIGHT.txt  Makefile  README  README.md
include/: H5Z_ROCCI.h  Timer.hpp  debug.hpp  h5z_multi.hpp  rocci.h  rocci_ByteToolkit.h  rocci_FileUtil.h  rocci_config.hpp  rocci_defines.h  rocci_utils.h  select.hpp
include/QoZ/: CMakeLists.txt  QoZConfig.cmake.in  README.md
include/QoZ/include/QoZ/api/: sz.hpp
include/QoZ/include/QoZ/api/impl/: SZInterp.hpp  SZLorenzoReg.hpp
include/QoZ/include/QoZ/compressor/: SZGeneralCompressor.hpp  SZInterpolationCompressor.hpp
include/QoZ/include/QoZ/frontend/: SZFastFrontend.hpp
include/QoZ/include/QoZ/lossless/: Lossless_zstd.hpp
include/QoZ/include/QoZ/predictor/: LorenzoPredictor.hpp
include/QoZ/include/QoZ/preprocessor/: CDF97.cpp.old  CDF97.h.old  PreFilter.hpp  PreProcessor.hpp  Transpose.hpp  Wavelet.hpp  pywt_wrapper.py
include/QoZ/include/QoZ/quantizer/: IntegerQuantizer.hpp
include/QoZ/include/QoZ/sperr/: CDF97.h  Conditioner_old.h  SPECK2D.h  SPERR2D_Compressor.h  SPERR2D_Decompressor.h  SPERR_C_API.h  timer.h
include/QoZ/include/QoZ/sperr/include/: SPECK_Storage.h  SPERR_C_API.h  sperr_helper.h
include/QoZ/include/QoZ/sperr/src/: CDF97.cpp  CMakeLists.txt  Conditioner.cpp  SPECK2D.cpp  SPECK3D.cpp  SPECK_Storage.cpp  SPERR.cpp  SPERR2D_Compressor.cpp  SPERR2D_Decompressor.cpp  SPERR3D_Compressor.cpp  SPERR3D_Decompressor.cpp  SPERR3D_OMP_C.cpp  SPERR3D_OMP_D.cpp  SPERR_C_API.cpp  sperr_helper.cpp
include/QoZ/include/QoZ/utils/: Config.hpp  FileUtil.hpp  Interpolators.hpp  Iterator.hpp  Sample.hpp  qcat_ssim.h  qcat_ssim.hpp
include/QoZ/test/: qoz.cpp  sperrCompare.cpp  sperrEstimatePSNR.cpp  sperrEstimateSSIM.cpp  sperrParamRun.cpp
include/surrogates/SPERR/: SZInterp.hpp  Sample.hpp  estimate_metric.h
include/surrogates/SPERR/sperr/: Base_Filter.h  Conditioner.h  SPECK3D.h  SPECK_Storage.h  SPERR.h  SPERR3D_Compressor.h  SPERR3D_Decompressor.h  SPERR3D_OMP_C.h  SPERR3D_OMP_D.h  SZBlockInterpolationCompressor.hpp  SZInterpolationCompressor.hpp  sperr_helper.h
include/surrogates/SPERR/utils/: Config.hpp  Metrics.hpp  Statistic.hpp
include/surrogates/SZ3/: CustomHuffmanEncoder.hpp  estimate_metric.h  sampling.hpp
include/surrogates/SZp/: SZp_float.h  estimate_metric.h
include/surrogates/SZx/: estimate_metric.h  sampling.h  szx_float.h
include/surrogates/ZFP/: estimate_metric.h  sampling.h
include/surrogates/cuSZp/: cuSZp_f32.h
src/: H5Z_ROCCI.c  H5Z_ROCCI.cc  rocci.c  rocci.cc  rocci_ByteToolkit.c  rocci_ByteToolkit.cc  rocci_FileUtil.cc  rocci_utils.c  rocci_utils.cc
src/inih/: ini.c
src/surrogates/: README.md  qcat_ssim.c  qcat_ssim.cc
src/surrogates/SPERR/: SPERRSurrogate.cc  estimate_metric.cc
src/surrogates/SZ3/: CustomHuffmanEncoder.cc  SZ3Surrogate.cc  estimate_cr.cc  estimate_metric.cc  estimate_psnr.cc  estimate_ssim.cc
src/surrogates/SZp/: SZpSurrogate.cc  SZp_float.cc  estimate_metric.cc
src/surrogates/SZx/: SZxSurrogate.c  SZxSurrogate.cc  estimate_metric.c  estimate_metric.cc  sampling.c  sampling.cc  szx_float.c  szx_float.cc
src/surrogates/ZFP/: ZFPSurrogate.cc  estimate_metric.cc
src/surrogates/cuSZp/: cuSZpSurrogate.cc  cuSZp_entry.cu  estimatef32.cu
test/: CMakeLists.txt  Makefile  drocciFromHDF5.c  h5repack.sh  print_h5repack_args.cc  rocci.config  rocciToHDF5.c  rocciToHDF5.cc  tem.cc
tools/: CMakeLists.txt  conf2int.cpp  h5z_multi.cpp  select.cpp
