function(build_hdf5_test)
  get_filename_component(test_name ${ARGV0} NAME_WE)
  add_executable(${test_name} ${ARGV})
  target_link_libraries(${test_name} PUBLIC ROCCI hdf5rocci)
endfunction(build_hdf5_test)

build_hdf5_test(rocciToHDF5.c) 
build_hdf5_test(drocciFromHDF5.c)
build_hdf5_test(convertBinToHDF5.c)
build_hdf5_test(print_h5repack_args.c)